--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -9,7 +9,6 @@ h1{
 h2{
   color: $highlight-color;
   //color: #b69e59;
-  white-space: nowrap;
   font-family: 'Montserrat', sans-serif;
 }
 
